exports[`prefer-iterator-concat > invalid(1): new Set([...foo, ...bar]) 1`] = `

  1 | new Set([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(1): new Set([...foo, ...bar]) 2`] = `

Message:
> 1 | new Set([...foo, ...bar])
    |         ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | new Set(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(10): Array.from([...foo, ...bar], mapFunction) 1`] = `

  1 | Array.from([...foo, ...bar], mapFunction)

`;

exports[`prefer-iterator-concat > invalid(10): Array.from([...foo, ...bar], mapFunction) 2`] = `

Message:
> 1 | Array.from([...foo, ...bar], mapFunction)
    |            ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | Array.from(Iterator.concat(foo, bar), mapFunction)

`;

exports[`prefer-iterator-concat > invalid(11): Array.from([...foo, ...bar], mapFunction, thisArgument) 1`] = `

  1 | Array.from([...foo, ...bar], mapFunction, thisArgument)

`;

exports[`prefer-iterator-concat > invalid(11): Array.from([...foo, ...bar], mapFunction, thisArgument) 2`] = `

Message:
> 1 | Array.from([...foo, ...bar], mapFunction, thisArgument)
    |            ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | Array.from(Iterator.concat(foo, bar), mapFunction, thisArgument)

`;

exports[`prefer-iterator-concat > invalid(12): Array.from([...foo, ...bar], mapFunction, thisArgument, extra) 1`] = `

  1 | Array.from([...foo, ...bar], mapFunction, thisArgument, extra)

`;

exports[`prefer-iterator-concat > invalid(12): Array.from([...foo, ...bar], mapFunction, thisArgument, extra) 2`] = `

Message:
> 1 | Array.from([...foo, ...bar], mapFunction, thisArgument, extra)
    |            ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | Array.from(Iterator.concat(foo, bar), mapFunction, thisArgument, extra)

`;

exports[`prefer-iterator-concat > invalid(13): Array.from([...foo, ...throwsOnIteration], mapFunction) 1`] = `

  1 | Array.from([...foo, ...throwsOnIteration], mapFunction)

`;

exports[`prefer-iterator-concat > invalid(13): Array.from([...foo, ...throwsOnIteration], mapFunction) 2`] = `

Message:
> 1 | Array.from([...foo, ...throwsOnIteration], mapFunction)
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | Array.from(Iterator.concat(foo, throwsOnIteration), mapFunction)

`;

exports[`prefer-iterator-concat > invalid(14): Object.fromEntries([...foo, ...bar]) 1`] = `

  1 | Object.fromEntries([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(14): Object.fromEntries([...foo, ...bar]) 2`] = `

Message:
> 1 | Object.fromEntries([...foo, ...bar])
    |                    ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | Object.fromEntries(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(15): Uint8Array.from([...foo, ...bar]) 1`] = `

  1 | Uint8Array.from([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(15): Uint8Array.from([...foo, ...bar]) 2`] = `

Message:
> 1 | Uint8Array.from([...foo, ...bar])
    |                 ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | Uint8Array.from(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(16): Uint8Array.from([...foo, ...bar], mapFunction) 1`] = `

  1 | Uint8Array.from([...foo, ...bar], mapFunction)

`;

exports[`prefer-iterator-concat > invalid(16): Uint8Array.from([...foo, ...bar], mapFunction) 2`] = `

Message:
> 1 | Uint8Array.from([...foo, ...bar], mapFunction)
    |                 ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | Uint8Array.from(Iterator.concat(foo, bar), mapFunction)

`;

exports[`prefer-iterator-concat > invalid(17): Promise.all([...foo, ...bar]) 1`] = `

  1 | Promise.all([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(17): Promise.all([...foo, ...bar]) 2`] = `

Message:
> 1 | Promise.all([...foo, ...bar])
    |             ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | Promise.all(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(18): Promise.allSettled([...foo, ...bar]) 1`] = `

  1 | Promise.allSettled([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(18): Promise.allSettled([...foo, ...bar]) 2`] = `

Message:
> 1 | Promise.allSettled([...foo, ...bar])
    |                    ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | Promise.allSettled(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(19): Promise.any([...foo, ...bar]) 1`] = `

  1 | Promise.any([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(19): Promise.any([...foo, ...bar]) 2`] = `

Message:
> 1 | Promise.any([...foo, ...bar])
    |             ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | Promise.any(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(2): new Map([...foo, ...bar]) 1`] = `

  1 | new Map([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(2): new Map([...foo, ...bar]) 2`] = `

Message:
> 1 | new Map([...foo, ...bar])
    |         ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | new Map(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(20): Promise.race([...foo, ...bar]) 1`] = `

  1 | Promise.race([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(20): Promise.race([...foo, ...bar]) 2`] = `

Message:
> 1 | Promise.race([...foo, ...bar])
    |              ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | Promise.race(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(21): for (const value of [...foo, ...bar]); 1`] = `

  1 | for (const value of [...foo, ...bar]);

`;

exports[`prefer-iterator-concat > invalid(21): for (const value of [...foo, ...bar]); 2`] = `

Message:
> 1 | for (const value of [...foo, ...bar]);
    |                     ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | for (const value of Iterator.concat(foo, bar));

`;

exports[`prefer-iterator-concat > invalid(22): async () => { for await (const value of [...foo, ...bar]); } 1`] = `

  1 | async () => { for await (const value of [...foo, ...bar]); }

`;

exports[`prefer-iterator-concat > invalid(22): async () => { for await (const value of [...foo, ...bar]); } 2`] = `

Message:
> 1 | async () => { for await (const value of [...foo, ...bar]); }
    |                                         ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | async () => { for await (const value of Iterator.concat(foo, bar)); }

`;

exports[`prefer-iterator-concat > invalid(23): function * foo() {\n\tyield * [...bar, ...baz];\n} 1`] = `

  1 | function * foo() {
  2 | 	yield * [...bar, ...baz];
  3 | }

`;

exports[`prefer-iterator-concat > invalid(23): function * foo() {\n\tyield * [...bar, ...baz];\n} 2`] = `

Message:
  1 | function * foo() {
> 2 | 	yield * [...bar, ...baz];
    | 	        ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.
  3 | }

Suggestion 1/1: Use \`Iterator.concat(…)\`.:
  1 | function * foo() {
  2 | 	yield * Iterator.concat(bar, baz);
  3 | }

`;

exports[`prefer-iterator-concat > invalid(24): new Set([...(foo ? bar : baz), ...(qux)]) 1`] = `

  1 | new Set([...(foo ? bar : baz), ...(qux)])

`;

exports[`prefer-iterator-concat > invalid(24): new Set([...(foo ? bar : baz), ...(qux)]) 2`] = `

Message:
> 1 | new Set([...(foo ? bar : baz), ...(qux)])
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | new Set(Iterator.concat((foo ? bar : baz), (qux)))

`;

exports[`prefer-iterator-concat > invalid(25): new Set((([...foo, ...bar]))) 1`] = `

  1 | new Set((([...foo, ...bar])))

`;

exports[`prefer-iterator-concat > invalid(25): new Set((([...foo, ...bar]))) 2`] = `

Message:
> 1 | new Set((([...foo, ...bar])))
    |           ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | new Set(((Iterator.concat(foo, bar))))

`;

exports[`prefer-iterator-concat > invalid(26): new Set([\n\t...foo,\n\t...bar,\n]) 1`] = `

  1 | new Set([
  2 | 	...foo,
  3 | 	...bar,
  4 | ])

`;

exports[`prefer-iterator-concat > invalid(26): new Set([\n\t...foo,\n\t...bar,\n]) 2`] = `

Message:
> 1 | new Set([
    |         ^
> 2 | 	...foo,
    | ^^^^^^^^
> 3 | 	...bar,
    | ^^^^^^^^
> 4 | ])
    | ^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | new Set(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(27): new Set([/* comment */ ...foo, ...bar]) 1`] = `

  1 | new Set([/* comment */ ...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(27): new Set([/* comment */ ...foo, ...bar]) 2`] = `

Message:
> 1 | new Set([/* comment */ ...foo, ...bar])
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

`;

exports[`prefer-iterator-concat > invalid(28): Promise.all([/* comment */ ...foo, ...bar]) 1`] = `

  1 | Promise.all([/* comment */ ...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(28): Promise.all([/* comment */ ...foo, ...bar]) 2`] = `

Message:
> 1 | Promise.all([/* comment */ ...foo, ...bar])
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

`;

exports[`prefer-iterator-concat > invalid(29): const a = [1], b = [2]; new Set([...a, ...b]); 1`] = `

  1 | const a = [1], b = [2]; new Set([...a, ...b]);

`;

exports[`prefer-iterator-concat > invalid(29): const a = [1], b = [2]; new Set([...a, ...b]); 2`] = `

Message:
> 1 | const a = [1], b = [2]; new Set([...a, ...b]);
    |                                 ^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | const a = [1], b = [2]; new Set(Iterator.concat(a, b));

`;

exports[`prefer-iterator-concat > invalid(3): new WeakSet([...foo, ...bar]) 1`] = `

  1 | new WeakSet([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(3): new WeakSet([...foo, ...bar]) 2`] = `

Message:
> 1 | new WeakSet([...foo, ...bar])
    |             ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | new WeakSet(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(30): Array.from([...[1], ...[2]]); 1`] = `

  1 | Array.from([...[1], ...[2]]);

`;

exports[`prefer-iterator-concat > invalid(30): Array.from([...[1], ...[2]]); 2`] = `

Message:
> 1 | Array.from([...[1], ...[2]]);
    |            ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | Array.from(Iterator.concat([1], [2]));

`;

exports[`prefer-iterator-concat > invalid(31): function collect(text: String, values: string[]) { return Array.from([...text, ...values]); } 1`] = `

  1 | function collect(text: String, values: string[]) { return Array.from([...text, ...values]); }

`;

exports[`prefer-iterator-concat > invalid(31): function collect(text: String, values: string[]) { return Array.from([...text, ...values]); } 2`] = `

Message:
> 1 | function collect(text: String, values: string[]) { return Array.from([...text, ...values]); }
    |                                                                      ^^^^^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | function collect(text: String, values: string[]) { return Array.from(Iterator.concat(text, values)); }

`;

exports[`prefer-iterator-concat > invalid(4): new WeakMap([...foo, ...bar]) 1`] = `

  1 | new WeakMap([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(4): new WeakMap([...foo, ...bar]) 2`] = `

Message:
> 1 | new WeakMap([...foo, ...bar])
    |             ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | new WeakMap(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(5): new Int8Array([...foo, ...bar]) 1`] = `

  1 | new Int8Array([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(5): new Int8Array([...foo, ...bar]) 2`] = `

Message:
> 1 | new Int8Array([...foo, ...bar])
    |               ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | new Int8Array(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(6): new Uint8Array([...foo, ...bar]) 1`] = `

  1 | new Uint8Array([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(6): new Uint8Array([...foo, ...bar]) 2`] = `

Message:
> 1 | new Uint8Array([...foo, ...bar])
    |                ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | new Uint8Array(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(7): new Float64Array([...foo, ...bar]) 1`] = `

  1 | new Float64Array([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(7): new Float64Array([...foo, ...bar]) 2`] = `

Message:
> 1 | new Float64Array([...foo, ...bar])
    |                  ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | new Float64Array(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(8): Array.from([...foo, ...bar]) 1`] = `

  1 | Array.from([...foo, ...bar])

`;

exports[`prefer-iterator-concat > invalid(8): Array.from([...foo, ...bar]) 2`] = `

Message:
> 1 | Array.from([...foo, ...bar])
    |            ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | Array.from(Iterator.concat(foo, bar))

`;

exports[`prefer-iterator-concat > invalid(9): Array.from([...foo, ...bar], ) 1`] = `

  1 | Array.from([...foo, ...bar], )

`;

exports[`prefer-iterator-concat > invalid(9): Array.from([...foo, ...bar], ) 2`] = `

Message:
> 1 | Array.from([...foo, ...bar], )
    |            ^^^^^^^^^^^^^^^^ Use \`Iterator.concat(…)\` instead of creating a temporary array from spreads.

Output:
  1 | Array.from(Iterator.concat(foo, bar), )

`;
